update: add traefik labels

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Chord Trainer</title>
+  <title>Chords GIGACHAD</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <main class="container">
-    <h1>Chord Trainer</h1>
+    <h1>Chords GIGACHAD</h1>
 
     <div class="row">
       <label class="label">Tempo (BPM)
