update: localisation for french chords display

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <main class="container">
-    <h1>Chords GIGACHAD</h1>
+    <header class="row">
+      <h1 style="margin-right:auto;">Chords GIGACHAD ᕙ⁠(⁠⇀⁠‸⁠↼⁠‶⁠)⁠ᕗ</h1>
+      <button id="lang-toggle" class="btn" title="Toggle language">EN</button>
+    </header>
 
     <div class="row">
       <label class="label">Tempo (BPM)
@@ -34,15 +37,13 @@
 
     <div class="row wrap">
       <span class="label">Roots</span>
-      <!-- Toggle any roots you want to practice -->
       <div id="roots"></div>
     </div>
 
     <div class="chord" id="chord">—</div>
-    <div class="subtle">Tip: change BPM or chord length and press Start.</div>
+    <div class="subtle">Pick types/roots, set BPM, then Start.</div>
   </main>
 
   <script src="app.js"></script>
 </body>
 </html>
-
